A few misc cleanups
PiperOrigin-RevId: 742370058